# multibody

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  compute.cpp  compute.h  graphics.cpp  graphics.h  main.cpp  test_alg.cpp  test_alg.h  vertex.h
shaders/: Makefile  compute_acc.comp  compute_acc.comp.spv  compute_pos.comp  compute_pos.comp.spv  compute_simple.comp  compute_simple.comp.spv  particle.frag  particle.frag.spv  particle.vert  particle.vert.spv  shader_base.frag  shader_base.frag.spv  shader_base.vert.spv
vkcore/: CMakeLists.txt
vkcore/include/: common.h  debug.h  physical_device.h  swap_chain.h  utils.hpp  vkcore.hpp
vkcore/src/: common.cpp  debug.cpp  physical_device.cpp  swap_chain.cpp  utils.cpp  vkcore.cpp
